k8s/infra/traefik/traefik-depl.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-depl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      # https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#more-practical-use-cases
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - traefik
                topologyKey: kubernetes.io/hostname
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v3.0.1
          args:
            #
            # https://doc.traefik.io/traefik/operations/dashboard/#secure-mode
            #
            # 1. Start by enabling the dashboard by using the following option from Traefik's API on the static configuration:
            # 2. Then define a routing configuration on Traefik itself, with a router attached to the service api@internal in the dynamic configuration, to allow defining:
            #
            - --api=true
            #
            # https://doc.traefik.io/traefik/operations/dashboard/#insecure-mode
            #
            # https://doc.traefik.io/traefik/operations/api/#insecure
            #
            # Enable the API in insecure mode, which means that the API will be available directly on the entryPoint named 'traefik'.
            #
            - --api.insecure=false
            #
            # https://doc.traefik.io/traefik/operations/api/#dashboard
            # https://doc.traefik.io/traefik/operations/dashboard/
            #
            # The dashboard is available at the same location as the API
            # but on the path /dashboard/ by default.
            #
            # The trailing slash / in /dashboard/ is mandatory
            # Optional, Default=true
            #
            - --api.dashboard=false
            #
            # https://doc.traefik.io/traefik/observability/access-logs/#configuration
            #
            - --accesslog
            #
            - --log.level=DEBUG
            #
            #
            # Disables certificate verification between your Traefik instance and your backends
            #
            # https://doc.traefik.io/traefik/v3.0/routing/overview/#insecureskipverify
            #
            - --serversTransport.insecureSkipVerify=true
            #
            - --entrypoints.http.address=:80
            #
            - --providers.kubernetescrd
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: auth-route
spec:
  entryPoints:
    - http
  routes:
    - match: PathPrefix(`/v1/auth`)
      kind: Rule
      middlewares:
        - name: strip-auth-prefix
      services:
        - name: auth-srv
          port: 3000
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-auth-prefix
spec:
  stripPrefix:
    prefixes:
      - /v1/auth
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-srv
spec:
  type: ClusterIP
  selector:
    app: traefik
  ports:
    - name: traefik
      protocol: TCP
      port: 3000
      targetPort: 3000
---
#
# If you want to debug this, you have to
#
# 2. Register '127.0.0.1 tma.com' in your /etc/hosts
# 3. Access http://tma.com:30000/v1/auth/healthz
#
apiVersion: v1
kind: Service
metadata:
  name: traefik-srv-nodeport
spec:
  type: NodePort
  selector:
    app: traefik
  ports:
    - name: traefik-nodeport
      protocol: TCP
      targetPort: 80
      port: 80
      nodePort: 30000
